Fix Safe Browsing cert reports URL

BUG=687779
TBR=jialiul@chromium.org

Review-Url: https://codereview.chromium.org/2676463002
Cr-Commit-Position: refs/heads/master@{#447683}

Former-commit-id: 13df10e53b1b9bd701917c981206c31405ad6b2d