chrome/browser/safe_browsing/certificate_reporting_service.cc
@@ -21,7 +21,8 @@ namespace {
 // a client seeing an invalid cert might not be able to make an HTTPS connection
 // to report it.
 const char kExtendedReportingUploadUrl[] =
-    "http://safebrowsing.googleusercontent.com/safebrowsing/clientreport/";
+    "http://safebrowsing.googleusercontent.com/safebrowsing/clientreport/"
+    "chrome-certs";
 
 // Compare function that orders Reports in reverse chronological order (i.e.
 // oldest item is last).
